--- a/functions/package.json
+++ b/functions/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "functions",
+  "name": "madnessenjineerapi",
   "scripts": {
     "lint": "tslint --project tsconfig.json",
     "build": "tsc",
-    "serve": "npm run build && firebase serve --only functions",
+    "serve": "concurrently --kill-others \"tsc -w\" \"firebase serve --only functions\"",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -11,10 +11,13 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1"
+    "firebase-functions": "^1.0.1",
+    "github-api": "^3.0.0"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3"
   },
