--- a/package.json
+++ b/package.json
@@ -1,54 +1,94 @@
 {
-    "name": "@madnesslabs/madnessenjineer",
-    "private": true,
-    "version": "0.0.1",
-    "description": "A component maker in the browser",
-    "files": [
-        "dist/"
-    ],
-    "scripts": {
-        "build": "stencil build",
-        "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
-        "devWithSW": "sd concurrent \"stencil build --dev --service-worker --watch\" \"stencil-dev-server\" ",
-        "serve": "stencil-dev-server",
-        "start": "npm run dev",
-        "test": "jest --no-cache",
-        "test.watch": "jest --watch --no-cache"
-    },
-    "dependencies": {
-        "@ionic/core": "4.0.0-alpha.4",
-        "@stencil/core": "0.8.0",
-        "grapesjs": "^0.14.15",
-        "grapesjs-preset-newsletter": "^0.2.15"
-    },
-    "devDependencies": {
-        "@stencil/dev-server": "latest",
-        "@stencil/sass": "0.0.3",
-        "@stencil/utils": "latest",
-        "@types/jest": "^22.2.2",
-        "jest": "^22.4.3"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/madnesslabs/madnessenjineer.git"
-    },
-    "author": "Madness Labs",
-    "license": "MIT",
-    "bugs": {
-        "url": "https://github.com/madnesslabs/madnessenjineer/issues"
-    },
-    "homepage": "https://madnessenjineer.net",
-    "jest": {
-        "transform": {
-            "^.+\\.(js|ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
-        },
-        "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "json",
-            "jsx"
-        ]
+  "name": "@madnesslabs/madnessenjineer",
+  "private": true,
+  "version": "0.0.1",
+  "description": "A component maker in the browser",
+  "files": [
+    "dist/"
+  ],
+  "scripts": {
+    "build": "stencil build && npx cap copy",
+    "build:app": "stencil build && npx cap copy",
+    "build:prerender": "stencil build --prerender",
+    "build:stats": "stencil build --stats",
+    "deploy:api": "npm run lint:api:fix && cd ./functions && npm run test && firebase deploy --only functions",
+    "deploy:api:live": "npm run lint:api:fix && firebase deploy -P live --only functions",
+    "deploy:app": "npm run lint:app:fix && npm run env -- dev && stencil build && firebase deploy --only hosting",
+    "deploy:app:live": "npm run lint:app:fix && npm run env -- live && stencil build && firebase deploy -P live --only hosting",
+    "deploy:docs": "npm run docs && firebase deploy --only hosting",
+    "dev": "npm run env -- local && sd concurrent \"stencil build --dev --watch\" \"npm run sync\" ",
+    "dev:live": "sd concurrent \"stencil build --watch\" \"npm run sync\" ",
+    "docs": "npm run docs:components && npm run docs:api",
+    "docs:api": "apidoc -i ./functions/src/ -o ./www/docs/api",
+    "docs:components": "typedoc --name \"TrackMyGiving Components\" --out ./www/docs/components --exclude **/*.spec.ts ./src",
+    "env": "node tasks/env.js",
+    "git:prepush": "npm run lint:fix && stencil build",
+    "lint": "npm run lint:api && npm run lint:app",
+    "lint:fix": "npm run lint:api:fix && npm run lint:app:fix",
+    "lint:api": "tslint -c ./functions/tslint.json './functions/src/**/*.ts'",
+    "lint:api:fix": "tslint -c ./functions/tslint.json './functions/src/**/*.ts' --fix",
+    "lint:app": "tslint -c ./tslint.json './src/**/*.{ts,tsx}'",
+    "lint:app:fix": "tslint -c ./tslint.json './src/**/*.{ts,tsx}' --fix",
+    "serve": "npm run sync",
+    "start": "rimraf www/build && npm run dev",
+    "stencil": "rimraf www/* && npm run build",
+    "sync": "browser-sync start -c bs-config.js",
+    "test": "jest --no-cache",
+    "test:watch": "jest --watch --no-cache"
+  },
+  "dependencies": {
+    "@ionic/core": "4.0.0-alpha.7",
+    "@stencil/core": "0.9.4",
+    "firebase": "^4.10.1",
+    "grapesjs": "^0.14.15",
+    "grapesjs-preset-newsletter": "^0.2.15"
+  },
+  "devDependencies": {
+    "@stencil/sass": "latest",
+    "@stencil/utils": "latest",
+    "@types/jest": "^21.1.1",
+    "apidoc": "^0.17.6",
+    "archiver": "^2.1.0",
+    "browsersync": "0.0.1-security",
+    "connect-history-api-fallback": "^1.5.0",
+    "copy": "^0.3.1",
+    "fs-extra": "^4.0.3",
+    "husky": "^1.0.0-rc.6",
+    "jest": "^21.2.1",
+    "tslint": "^5.10.0",
+    "tslint-ionic-rules": "0.0.14",
+    "typedoc": "^0.10.0",
+    "typedoc-plugin-external-module-name": "^1.1.1"
+  },
+  "enjin": {
+    "root": "www"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run git:prepush"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/madnesslabs/madnessenjineer.git"
+  },
+  "author": "Madness Labs",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/madnesslabs/madnessenjineer/issues"
+  },
+  "homepage": "https://madnessenjineer.net",
+  "jest": {
+    "transform": {
+      "^.+\\.(js|ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json",
+      "jsx"
+    ]
+  }
 }
